--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ padding: 20px;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
+ color: #FFFFFF;
 
 }
 
@@ -58,10 +59,30 @@ font-size: 48px;
 
 }
 
-.img{
+.img1{
     display: flex;
     justify-content: flex-end;
     margin-right: 300px;
     margin-top: 20px;
     align-self: baseline;
+}
+
+h2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img2{
+
+display: flex;
+flex-direction: column;
+align-items: center;
+flex-flow: column;
+
+}
+
+figcaption{
+
+    text-align: center;
 }
